[project]
name = 'vtk-xref'
version = '0.1.0'
description = 'Sphinx extension for linking to VTK class documentation.'
authors = [{ name = 'PyVista Developers', email = 'info@pyvista.org' }]
readme = 'README.rst'
license = { text = 'MIT' }
requires-python = '>=3.8'
classifiers = [
    "Framework :: Sphinx :: Extension",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    'sphinx>=4.0',
    'beautifulsoup4',
    'requests',
]

[project.urls]
Homepage = 'https://github.com/pyvista/vtk-xref'

[build-system]
requires = ['setuptools>=61']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['vtk_xref']

[dependency-groups]
dev = ['pytest']