[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=61']

[dependency-groups]
dev = ['pytest', 'pytest-cov', 'pre-commit']

[project]
authors = [{name = 'PyVista Developers', email = 'info@pyvista.org'}]
classifiers = [
  "Framework :: Sphinx :: Extension",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  'sphinx>=4.0',
  'beautifulsoup4',
  'requests'
]
description = 'Sphinx extension for linking to VTK class documentation.'
license = {text = 'MIT'}
name = 'vtk-xref'
readme = 'README.rst'
requires-python = '>=3.8'
version = '0.1.1'

[project.urls]
Homepage = 'https://github.com/pyvista/vtk-xref'

[tool.pytest.ini_options]
addopts = "--cov=vtk_xref --cov-fail-under=85"
testpaths = 'tests'

[tool.ruff]
line-length = 100

[tool.setuptools]
packages = ['vtk_xref']
